@@ -266,7 +266,7 @@ if (!defined('PGV_PHPGEDVIEW')) {
 									echo "S";													 // cond = Condition (Single)
 								}
 								?>", "<?php
-								print PrintReady($people["wife"]->getBirthYear());				 // yob = Year of Birth
+								print PrintReady($people["wife"]->getbirthyear());				 // yob = Year of Birth
 							?>", "<?php
 								print PrintReady($censyear-$people["wife"]->getbirthyear());	 //  age = Census Date minus YOB
 							?>", "<?php
@@ -1398,8 +1398,9 @@ function print_pedigree_person_nav2($pid, $style=1, $show_famlink=true, $count=0
 							}
 						}
 						
-						// Children ------------------------------   @var $child Person 
+						// Children ------------------------------   @var $child Person
 						$spouselinks .= "<div id='spouseFam'>";
+						$spouselinks .= "<ul class=\"clist ".$TEXT_DIRECTION."\">\n";
 						foreach($children as $c=>$child) {
 							$cpid = $child->getXref();
 							if ($child) {
@@ -1452,6 +1453,7 @@ function print_pedigree_person_nav2($pid, $style=1, $show_famlink=true, $count=0
 									$spouselinks .= "</li>\n";
 							}
 						}
+						$spouselinks .= "</ul>\n";
 						$spouselinks .= "</div>";
 					}
 				}
